2017-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/libgvm_util.pc.in (Libs): Leave note that having '-luuid' in
	the public linker flags should not be necessary.

2017-01-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/libgvm_util.pc.in: Add missing dependency "uuid".

2017-01-25  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* gmp/, gmp/gmp.c, gmp/gmp.h, gmp/CMakeLists.txt, gmp/libgvm_gmp.pc.in:
	New.  Moved here from openvas-libraries (omp).

	* CMakeLists.txt: Consider new library "gmp".

2017-01-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/logging.c (log_func_for_gnutls): Remove superfluous Doxygen
	'ref' command without existing target.

2017-01-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/logging.c, base/logging.h: New. Moved here from
	openvas-libraries.

	* base/CMakeLists.txt: Handle new module "logging".

2017-01-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/uuidutils.c, util/uuidutils.h: New. Moved here from
	openvas-libraries.

	* util/CMakeLists.txt: Handle new module "uuidutils".

	* util/libgvm_util.pc.in, INSTALL: Add uuid library as dependency.

2017-01-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/xmlutils.c: Update filename in documentation as well.

2017-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* osp/osp.c, osp/osp.h, osp/CMakeLists.txt, osp/libgvm_osp.pc.in: New.
	Moved here from openvas-libraries.

	* CMakeLists.txt: Added handling of "osp".

2017-01-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/libgvm_util.pc.in: Remove gpgme from 'Requires.private',
	libgpgme does not support pkg-config.

2017-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/xmlutils.c, util/xmlutils.h: New. Moved here from
	openvas-libraries.

	* util/CMakeLists.txt: Handle new module "xmlutils".

2017-01-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
